--- a/src/routes/styles.css
+++ b/src/routes/styles.css
@@ -20,9 +20,17 @@ html {
 }
 
 body {
-  background: var(--qwik-dark-background);
   color: var(--qwik-dark-text);
   overflow-x: hidden;
+}
+
+table {
+  border-collapse: collapse;
+}
+
+table td,
+th {
+  border: 1px solid black;
 }
 
 /* HEADINGS ------------------------------------- */
@@ -37,6 +45,7 @@ h1 {
   font-size: 3.2rem;
   text-align: center;
 }
+
 h1 .highlight,
 h3 .highlight {
   color: var(--qwik-light-blue);
@@ -46,6 +55,7 @@ h2 {
   font-weight: 400;
   font-size: 2.4rem;
 }
+
 h2 .highlight {
   font-weight: 700;
 }
@@ -58,9 +68,11 @@ h3 {
   h1 {
     font-size: 5rem;
   }
+
   h2 {
     font-size: 3.4rem;
   }
+
   h3 {
     font-size: 3rem;
   }
@@ -88,19 +100,24 @@ ul {
   margin: 0 auto;
   padding: 30px 40px;
 }
+
 .container.container-purple {
   background: var(--qwik-light-purple);
 }
+
 .container.container-dark {
   background: var(--qwik-dark-background);
   color: var(--qwik-dark-text);
 }
+
 .container.container-center {
   text-align: center;
 }
+
 .container.container-flex {
   /* does nothing on mobile */
 }
+
 .container.container-spacing-xl {
   padding: 50px 40px;
 }
@@ -109,9 +126,11 @@ ul {
   .container {
     padding: 50px 80px;
   }
+
   .container.container-spacing-xl {
     padding: 100px 60px;
   }
+
   .container.container-flex {
     display: flex;
     justify-content: center;
@@ -143,6 +162,7 @@ button.button-small {
 }
 
 @media screen and (min-width: 768px) {
+
   a.button,
   button {
     font-size: 1rem;
@@ -157,23 +177,20 @@ button.button-small {
   left: -100px;
   width: 400px;
   height: 400px;
-  background: radial-gradient(
-    57.58% 57.58% at 48.79% 42.42%,
-    rgba(24, 180, 244, 0.5) 0%,
-    rgba(46, 55, 114, 0) 63.22%
-  );
+  background: radial-gradient(57.58% 57.58% at 48.79% 42.42%,
+      rgba(24, 180, 244, 0.5) 0%,
+      rgba(46, 55, 114, 0) 63.22%);
   transform: rotate(5deg);
   opacity: 0.5;
   z-index: -1;
 }
+
 .ellipsis.ellipsis-purple {
   top: 1350px;
   left: -100px;
-  background: radial-gradient(
-    50% 50% at 50% 50%,
-    rgba(172, 127, 244, 0.5) 0%,
-    rgba(21, 25, 52, 0) 100%
-  );
+  background: radial-gradient(50% 50% at 50% 50%,
+      rgba(172, 127, 244, 0.5) 0%,
+      rgba(21, 25, 52, 0) 100%);
   transform: rotate(-5deg);
 }
 
@@ -184,6 +201,7 @@ button.button-small {
     width: 1400px;
     height: 800px;
   }
+
   .ellipsis.ellipsis-purple {
     top: 1300px;
     left: -200px;
